tests/sumo/cf_model/errors/tau_below_stepsize/errors.sumo
Warning: Value of tau=0.50 in vehicle type 'lowTau' lower than simulation step size may cause collisions.
Warning: Teleporting vehicle 'follower'; collision with vehicle 'leader', lane='end_0', gap=-1.94, time=58.00 stage=move.
Warning: Vehicle 'follower' ends teleporting on edge 'rend', time 58.00.
